--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Essential Pencils</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>jar</packaging>
 	<properties>
-		<java.version>15</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,6 +38,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		
+
 		
 		<!-- For Data Validation -->
 		<dependency>
